test/e2e/chainsaw/hybridgateway/httproute-filters/01-httproute-filter-request-header-modifier.yaml
##
# Required bindings:
#   - http_route_name: Name of the HTTPRoute resource
#   - http_route_namespace: Namespace of the HTTPRoute resource
#   - test_name: The test name label to match (used for labels)
#   - route_hosts: List of hostnames for the HTTPRoute
#   - gateway_name: Name of the Gateway parent resource
#   - httpbin_service_namespace: Namespace of the httpbin backend service

---
# HTTPRoute with multiple HTTP method rules pointing to httpbin.
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($http_route_name)
  namespace: ($http_route_namespace)
  labels:
    chainsaw/test: ($test_name)
  annotations:
    konghq.com/strip-path: "false"
spec:
  hostnames: ($route_hosts)
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    # All standard HTTP methods to their respective endpoints.
    - matches:
        - path:
            type: PathPrefix
            value: /get
          method: GET
        - path:
            type: Exact
            value: /post
          method: POST
        - path:
            type: Exact
            value: /put
          method: PUT
        - path:
            type: Exact
            value: /patch
          method: PATCH
        - path:
            type: Exact
            value: /delete
          method: DELETE
        - path:
            type: PathPrefix
            value: /status
      # Add RequestHeaderModifier filter to modify headers.
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
            - name: X-Set
              value: "foo"
            add:
            - name: X-Add
              value: "bar"
            remove:
            - X-Remove
      backendRefs:
        - name: ($httpbin_deployment_name)
          port: 80
          namespace: ($httpbin_deployment_namespace)
