test/e2e/chainsaw/hybridgateway/httproute-filters/03-httproute-filter-response-header-modifier.yaml
---
# HTTPRoute with multiple HTTP method rules pointing to httpbin.
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($http_route_name)
  namespace: ($http_route_namespace)
  labels:
    chainsaw/test: ($test_name)
  annotations:
    konghq.com/strip-path: "false"
spec:
  hostnames: ($route_hosts)
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    # All standard HTTP methods to their respective endpoints.
    - matches:
        - path:
            type: Exact
            value: /get
          method: GET
      # Add ResponseHeaderModifier filter to modify headers.
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
            - name: X-Set-Response
              value: "foo"
            add:
            - name: X-Add-Response
              value: "bar"
            remove:
            - X-Remove-Response
      backendRefs:
        - name: ($httpbin_deployment_name)
          port: 80
          namespace: ($httpbin_deployment_namespace)
