test/e2e/chainsaw/hybridgateway/httproute-filters/05-httproute-url-rewrite-filter.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($http_route_name)
  namespace: ($http_route_namespace)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /httpbin-url-rewrite-replace-full-path
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: "/status/200"
      backendRefs:
        - name: ($httpbin_service_name)
          port: 80
    # ReplacePrefixMatch URL rewrite filter is not supported yet.
    # - matches:
    #  - path:
    #      type: PathPrefix
    #      value: /httpbin-url-rewrite-replace-prefix-match
    #  filters:
    #    - type: requestRedirect
    #      urlRewrite:
    #       path:
    #          type: ReplacePrefixMatch
    #          ReplacePrefixMatch: "/status"
    #  backendRefs:
    #    - name: ($httpbin_service_name)
    #      port: 80
